# Neural-Network

./: .gitmodules  CMakeLists.txt  ClassificationNN.cpp  ClassificationNN.hpp  Kernels.cpp  Kernels.hpp  Layer.hpp  Makefile  NeuralNetwork.cpp  NeuralNetwork.hpp  Neuron.cpp  README  ThreadPool.cpp  ThreadPool.hpp  main.cpp
include/: ClassificationNN.hpp  Neuron.hpp
src/: ClassificationNN.cpp  Layer.cpp
test/: CMakeLists.txt  main.cpp
